# example_python_c_extension_multilib

./: .gitignore  README.md
example_setuptools/: setup.py
example_setuptools/lib0/: lib0.cpp
example_skbuild/: CMakeLists.txt  README.md  python_c_extension_multilib_test.py  setup.py
example_skbuild/ext0/: CMakeLists.txt  ext0.cpp
example_skbuild/lib0/: CMakeLists.txt
